Added the pieces of chess

--- a/index.html
+++ b/index.html
@@ -11,70 +11,70 @@
 <body>
       <div class="container-palette">
             <div class="chess-mat">
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
-                  <div class="box-black"></div>
-                  <div class="box-white"></div>
+                  <div class="box-white"><img src="utils/rook-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/knight-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/bishop-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/queen-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/king-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/bishop-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/knight-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/rook-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-b.png" alt=""></div>
+                  <div class="box-white"><img src="" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-black"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/pawn-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/rook-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/knight-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/bishop-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/queen-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/king-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/bishop-w.png" alt=""></div>
+                  <div class="box-black"><img src="utils/knight-w.png" alt=""></div>
+                  <div class="box-white"><img src="utils/rook-w.png" alt=""></div>
             </div>
       </div>
 </body>
